Add RBAC implementation and audio generation features
- Introduced Role-Based Access Control (RBAC) with new roles and permissions management, including creation, retrieval, and assignment of roles and permissions.
- Added audio generation capabilities with a new endpoint for generating audio from articles, including support for custom voice settings and error handling.
- Implemented asynchronous processing for audio generation tasks to improve performance.
- Created new DTOs for role and permission management, along with validation for audio encoding and sample rates.
- Updated database schema to include roles and permissions tables, along with necessary migration scripts.
- Enhanced existing services and controllers to integrate new features and ensure proper authorization checks.
- Added utility classes for converting HTML content to SSML format for audio synthesis.
- Included various image assets for UI representation and improved user experience.