@@ -1,11 +1,14 @@
 package com.hieunguyen.podcastai.service.impl;
 
+import com.hieunguyen.podcastai.dto.request.RolePermissionAssignmentRequest;
 import com.hieunguyen.podcastai.dto.response.PermissionDto;
 import com.hieunguyen.podcastai.entity.Permission;
+import com.hieunguyen.podcastai.entity.Role;
 import com.hieunguyen.podcastai.enums.ErrorCode;
 import com.hieunguyen.podcastai.exception.AppException;
+import com.hieunguyen.podcastai.mapper.PermissionMapper;
 import com.hieunguyen.podcastai.repository.PermissionRepository;
-import com.hieunguyen.podcastai.repository.RolePermissionRepository;
+import com.hieunguyen.podcastai.repository.RoleRepository;
 import com.hieunguyen.podcastai.service.PermissionService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -15,7 +18,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @RequiredArgsConstructor
@@ -23,14 +26,15 @@ import java.util.stream.Collectors;
 public class PermissionServiceImpl implements PermissionService {
     
     private final PermissionRepository permissionRepository;
-    private final RolePermissionRepository rolePermissionRepository;
+    private final PermissionMapper permissionMapper;
+    private final RoleRepository roleRepository;
     
     @Override
     @Transactional(readOnly = true)
     public Page<PermissionDto> getAllPermissions(Pageable pageable) {
         log.info("Getting all permissions with pagination");
         return permissionRepository.findAll(pageable)
-                .map(this::mapToDto);
+                .map(permissionMapper::toDto);
     }
     
     @Override
@@ -38,8 +42,8 @@ public class PermissionServiceImpl implements PermissionService {
     public List<PermissionDto> getAllPermissions() {
         log.info("Getting all permissions");
         return permissionRepository.findAll().stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .map(permissionMapper::toDto)
+                .toList();
     }
     
     @Override
@@ -48,32 +52,68 @@ public class PermissionServiceImpl implements PermissionService {
         log.info("Getting permission by ID: {}", id);
         Permission permission = permissionRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.PERMISSION_NOT_FOUND));
-        return mapToDto(permission);
+        return permissionMapper.toDto(permission);
     }
-    
+
     @Override
     @Transactional(readOnly = true)
-    public PermissionDto getPermissionByCode(String code) {
-        log.info("Getting permission by code: {}", code);
-        Permission permission = permissionRepository.findByCode(code)
-                .orElseThrow(() -> new AppException(ErrorCode.PERMISSION_NOT_FOUND));
-        return mapToDto(permission);
+    public List<PermissionDto> getRolePermissions(Long roleId) {
+        log.info("Getting permissions for role ID: {}", roleId);
+
+        Role role = roleRepository.findById(roleId)
+                .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_FOUND));
+
+        return role.getPermissions().stream()
+                .map(permissionMapper::toDto)
+                .toList();
     }
-    
-    private PermissionDto mapToDto(Permission permission) {
-        // Count active roles with this permission
-        int rolesCount = rolePermissionRepository.findByPermissionAndIsActiveTrue(permission).size();
-        
-        return PermissionDto.builder()
-                .id(permission.getId())
-                .name(permission.getName())
-                .code(permission.getCode())
-                .description(permission.getDescription())
-                .resource(permission.getResource())
-                .action(permission.getAction())
-                .isActive(permission.getIsActive())
-                .rolesCount(rolesCount)
-                .build();
+
+    @Override
+    @Transactional
+    public PermissionDto assignPermissionToRole(Long roleId, RolePermissionAssignmentRequest request) {
+        log.info("Assigning permission ID {} to role ID {}", request.getPermissionId(), roleId);
+
+        Role role = roleRepository.findById(roleId)
+                .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_FOUND));
+
+        Permission permission = permissionRepository.findById(request.getPermissionId())
+                .orElseThrow(() -> new AppException(ErrorCode.PERMISSION_NOT_FOUND));
+
+        if (Boolean.FALSE.equals(role.getIsActive())) {
+            log.warn("Cannot assign permission to inactive role {}", role.getCode());
+            throw new AppException(ErrorCode.ROLE_NOT_FOUND);
+        }
+
+        if (Boolean.FALSE.equals(permission.getIsActive())) {
+            log.warn("Cannot assign inactive permission {} to role {}", permission.getCode(), role.getCode());
+            throw new AppException(ErrorCode.PERMISSION_NOT_FOUND);
+        }
+
+        role.getPermissions().add(permission);
+
+        roleRepository.save(role);
+
+        log.info("Successfully assigned permission {} to role {}", permission.getCode(), role.getCode());
+
+        return permissionMapper.toDto(permission);
+    }
+
+    @Override
+    @Transactional
+    public void revokePermissionFromRole(Long roleId, Long permissionId) {
+        log.info("Revoking permission ID {} from role ID {}", permissionId, roleId);
+
+        Role role = roleRepository.findById(roleId)
+                .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_FOUND));
+
+        Permission permission = permissionRepository.findById(permissionId)
+                .orElseThrow(() -> new AppException(ErrorCode.PERMISSION_NOT_FOUND));
+
+        role.getPermissions().remove(permission);
+
+        roleRepository.save(role);
+
+        log.info("Successfully revoked permission {} from role {}", permission.getCode(), role.getCode());
     }
 }
 
