@@ -6,9 +6,8 @@ import com.hieunguyen.podcastai.dto.response.RoleDto;
 import com.hieunguyen.podcastai.entity.Role;
 import com.hieunguyen.podcastai.enums.ErrorCode;
 import com.hieunguyen.podcastai.exception.AppException;
-import com.hieunguyen.podcastai.repository.RolePermissionRepository;
+import com.hieunguyen.podcastai.mapper.RoleMapper;
 import com.hieunguyen.podcastai.repository.RoleRepository;
-import com.hieunguyen.podcastai.repository.UserRoleRepository;
 import com.hieunguyen.podcastai.service.RoleService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -18,7 +17,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 @RequiredArgsConstructor
@@ -26,15 +25,13 @@ import java.util.stream.Collectors;
 public class RoleServiceImpl implements RoleService {
     
     private final RoleRepository roleRepository;
-    private final UserRoleRepository userRoleRepository;
-    private final RolePermissionRepository rolePermissionRepository;
+    private final RoleMapper mapper;
     
     @Override
     @Transactional(readOnly = true)
     public Page<RoleDto> getAllRoles(Pageable pageable) {
         log.info("Getting all roles with pagination");
-        return roleRepository.findAll(pageable)
-                .map(this::mapToDto);
+        return roleRepository.findAll(pageable).map(mapper::toRoleDto);
     }
     
     @Override
@@ -42,8 +39,8 @@ public class RoleServiceImpl implements RoleService {
     public List<RoleDto> getAllRoles() {
         log.info("Getting all roles");
         return roleRepository.findAll().stream()
-                .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .map(mapper::toRoleDto)
+                .toList();
     }
     
     @Override
@@ -52,7 +49,7 @@ public class RoleServiceImpl implements RoleService {
         log.info("Getting role by ID: {}", id);
         Role role = roleRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_FOUND));
-        return mapToDto(role);
+        return mapper.toRoleDto(role);
     }
     
     @Override
@@ -61,7 +58,7 @@ public class RoleServiceImpl implements RoleService {
         log.info("Getting role by code: {}", code);
         Role role = roleRepository.findByCode(code)
                 .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_FOUND));
-        return mapToDto(role);
+        return mapper.toRoleDto(role);
     }
     
     @Override
@@ -69,29 +66,22 @@ public class RoleServiceImpl implements RoleService {
     public RoleDto createRole(RoleRequest request) {
         log.info("Creating new role with code: {}", request.getCode());
         
-        // Check if role code already exists
         if (roleRepository.existsByCode(request.getCode())) {
             log.warn("Role code already exists: {}", request.getCode());
             throw new AppException(ErrorCode.ROLE_NAME_EXISTS);
         }
         
-        // Check if role name already exists
         if (roleRepository.existsByName(request.getName())) {
             log.warn("Role name already exists: {}", request.getName());
             throw new AppException(ErrorCode.ROLE_NAME_EXISTS);
         }
         
-        Role role = Role.builder()
-                .name(request.getName())
-                .code(request.getCode().toUpperCase())
-                .description(request.getDescription())
-                .isActive(request.getIsActive() != null ? request.getIsActive() : true)
-                .build();
+        Role role = mapper.toRole(request);
         
         Role savedRole = roleRepository.save(role);
         log.info("Role created successfully with ID: {}", savedRole.getId());
         
-        return mapToDto(savedRole);
+        return mapper.toRoleDto(savedRole);
     }
     
     @Override
@@ -122,7 +112,7 @@ public class RoleServiceImpl implements RoleService {
         Role updatedRole = roleRepository.save(role);
         log.info("Role updated successfully with ID: {}", updatedRole.getId());
         
-        return mapToDto(updatedRole);
+        return mapper.toRoleDto(updatedRole);
     }
     
     @Override
@@ -152,29 +142,7 @@ public class RoleServiceImpl implements RoleService {
         Role activatedRole = roleRepository.save(role);
         
         log.info("Role activated successfully with ID: {}", id);
-        return mapToDto(activatedRole);
-    }
-    
-    private RoleDto mapToDto(Role role) {
-        // Count active permissions
-        int permissionsCount = rolePermissionRepository.findByRoleAndIsActiveTrue(role).size();
-        
-        // Count active users with this role
-        int usersCount = userRoleRepository.findByRoleAndIsActiveTrue(role).size();
-        
-        return RoleDto.builder()
-                .id(role.getId())
-                .name(role.getName())
-                .code(role.getCode())
-                .description(role.getDescription())
-                .isActive(role.getIsActive())
-                .createdAt(role.getCreatedAt())
-                .updatedAt(role.getUpdatedAt())
-                .createdBy(role.getCreatedBy())
-                .updatedBy(role.getUpdatedBy())
-                .permissionsCount(permissionsCount)
-                .usersCount(usersCount)
-                .build();
+        return mapper.toRoleDto(activatedRole);
     }
 }
 
